--- a/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/memberEdit.html
@@ -70,7 +70,8 @@
 									<div class="input-box input-group">
 										<input type="text" class="input-3" placeholder="휴대폰 번호" id="uMbrCpNum" name="uMbrCpNum" readonly/>
 										<button type="button" class="group-btn phone" id="SmsCertification">인증하기</button>
-										<input type="hidden" id="mbrCpCertYn" name="mbrCpCertYn" value="N">
+										<input type="hidden" id="uMbrCpCertYn" name="uMbrCpCertYn" value="N">
+										<input type="hidden" id="uMbrCpCertDate" name="uMbrCpCertDate" value="">
 									</div>
 									
 									<div class="input-box">
@@ -80,15 +81,15 @@
 										<button type="button" class="ba-btn1" id="memberUpdateBtn"><span>회원 정보 수정하기</span></button>
 									</div>
 									
-									<!-- <div class="mypage-btn">
+									<div class="mypage-btn">
 										<a href="#" class="my-btn">회원탈퇴</a>
-									</div> -->
+									</div>
 								</div>
 							</div>
 						</div>
 						
-						<input type="text" name="m" value="checkplusSerivce">	<!-- 필수 데이타로, 누락하시면 안됩니다. -->
-						<input type="text" name="EncodeData">					<!-- 위에서 업체정보를 암호화 한 데이타입니다. -->
+						<input type="hidden" name="m" value="checkplusSerivce">	<!-- 필수 데이타로, 누락하시면 안됩니다. -->
+						<input type="hidden" name="EncodeData">					<!-- 위에서 업체정보를 암호화 한 데이타입니다. -->
 			
 					</form>
 				</div>
@@ -96,10 +97,6 @@
 			</div>
 		</div>
 		
-		
-			
-		
-									
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
 
@@ -188,22 +185,6 @@ $("#emailCertBtn").click(function(){
 	}
 });
 
-//휴대폰 인증 성공
-function mobileAuthSuccess()
-{
-		
-	$("#smsCertificationCheck").css('display',"block");
-}
-
-
-//휴대폰 인증 실패
-function mobileAuthFail()
-{
-	modalAlertShow("인증에 실패했습니다.","");
-	
-}
-
-
 //회원수정
 $("#memberUpdateBtn").on('click', function(event){
 	
@@ -219,6 +200,10 @@ $("#memberUpdateBtn").on('click', function(event){
 	var mbrNm = $("#uMbrNm").val();
 	//휴대번호
 	var mbrCpNum = $("#uMbrCpNum").val();
+	//휴대폰 본인인증 여부
+	var mbrCpCertYn = $("#uMbrCpCertYn").val();
+	//휴대폰 본인인증 날짜
+	var mbrCpCertDate = $("#uMbrCpCertDate").val();
 	
 	if(isEmpty(mbrId)) {
 		fn_validation('uMbrIdCheck','이메일을 입력해주세요.', 'R');
@@ -232,28 +217,43 @@ $("#memberUpdateBtn").on('click', function(event){
 	$("#uMbrId").blur();
 	 
 	fn_validation('uMbrIdCheck','주로 사용하는 이메일을 입력해 주세요. 경매/판매 내역을 발송해 드립니다.', 'B');
+	
 	//비밀번호--------------------------------------------------------------------//
+	//비밀번호 문자 입력이 안되었다면..
 	if(isEmpty(mbrPasswrd)) {
 		$('#uMbrPwdCheckU').css('color','red');
 		$('#uMbrPwdCheckD').css('color','#999999');
 		return;
 	} 
+	
+	$('#uMbrPwdCheckU').css('color','#999999');
+	
+	//영어,숫자,특수문자 8~20사이
 	if(!/^[a-zA-Z0-9!@#$%^&*()?_~]{8,20}$/.test(mbrPasswrd))
 	{
 		$('#uMbrPwdCheckU').css('color','red');
 		$('#uMbrPwdCheckD').css('color','#999999');
 		return;
 	}
+	
+	
 	var chk = 0;
 	if(mbrPasswrd.search(/[0-9]/g) != -1 ) chk ++;
 	if(mbrPasswrd.search(/[a-z]/ig)  != -1 ) chk ++;
 	if(mbrPasswrd.search(/[!@#$%^&*()?_~]/g)  != -1  ) chk ++;
-	if(chk < 2)
+	
+	console.log("chk :"+chk);
+	
+	if(chk < 3)
 	{
-		$('#mbrPwdCheckU').css('color','#999999');
-		$('#mbrPwdCheckD').css('color','red');
+		console.log("check_chk");
+		$('#uMbrPwdCheckU').css('color','#999999');
+		$('#uMbrPwdCheckD').css('color','red');
 		return;
 	}
+	
+	$('#uMbrPwdCheckU').css('color','#999999');
+	
 	 var SamePass_0 = 0; //동일문자 카운트
 	 var SamePass_1 = 0; //연속성(+) 카운드
 	 var SamePass_2 = 0; //연속성(-) 카운드
@@ -283,27 +283,27 @@ $("#memberUpdateBtn").on('click', function(event){
 	 } // for
 	 
 	 if(SamePass_0 > 1) {
-		 $('#mbrPwdCheckU').css('color','#999999');
-		 $('#mbrPwdCheckD').css('color','red');
+		 $('#uMbrPwdCheckU').css('color','#999999');
+		 $('#uMbrPwdCheckD').css('color','red');
 		 return;
 	 } // if
 	 
 	 if(SamePass_1 > 1 || SamePass_2 > 1 )  {
-		 $('#mbrPwdCheckU').css('color','#999999');
-		 $('#mbrPwdCheckD').css('color','red');
+		 $('#uMbrPwdCheckU').css('color','#999999');
+		 $('#uMbrPwdCheckD').css('color','red');
 		 return;
 	 }
 	
 	 // 비밀번호 아이디 포함 여부
 	 if(mbrPasswrd.search(mbrId)>-1)
 	 {
-		 $('#mbrPwdCheckU').css('color','#999999');
-		 $('#mbrPwdCheckD').css('color','red');
+		 $('#uMbrPwdCheckU').css('color','#999999');
+		 $('#uMbrPwdCheckD').css('color','red');
 		  return;
 	 }
 	
-	 $('#mbrPwdCheckU').css('color','#999999');
-	 $('#mbrPwdCheckD').css('color','#999999');
+	 $('#uMbrPwdCheckU').css('color','#999999');
+	 $('#uMbrPwdCheckD').css('color','#999999');
 	 
 	 //비밀번호.비밀번호확인 일치 체크 mbrPwdReCheck
 	 if(mbrPasswrd != mbrPasswrdConfirm) {
@@ -328,12 +328,21 @@ $("#memberUpdateBtn").on('click', function(event){
 	 
 	fn_validation('uMbrCpNumCheck','', 'B');
 	
+	//휴대폰본인인증 여부
+	if(mbrCpCertYn == 'N') {
+		$("#smsCertificationCheck").show();
+		fn_validation('smsCertificationCheck','휴대폰 본인 인증을 해주세요.', 'R');
+		return;
+	}
+	
 	let memParams = {
 	  "mbrSq" : mbrSq,
 	  "mbrId" : mbrId,
 	  "mbrPasswrd" : mbrPasswrd,
 	  "mbrNm" : mbrNm,
-	  "mbrCpNum" : mbrCpNum
+	  "mbrCpNum" : mbrCpNum,
+	  "mbrCpCertYn" : mbrCpCertYn,
+	  "mbrCpCertDate" : mbrCpCertDate
 	}
 	
 	 $.ajax({
@@ -350,6 +359,22 @@ $("#memberUpdateBtn").on('click', function(event){
 	})
 	
 });
+
+//휴대폰 인증 성공
+function mobileAuthSuccess()
+{
+		
+	$("#smsCertificationCheck").css('display',"block");
+	fn_validation('smsCertificationCheck','휴대폰 인증완료.', 'B');
+}
+
+
+//휴대폰 인증 실패
+function mobileAuthFail()
+{
+	modalAlertShow("인증에 실패했습니다.","");
+	
+}
 
 
 //아이디 중복 체크 2022-03-29
