--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -38,7 +38,7 @@
 			<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 				<div class="panel-body">
 					<ul class="mypage-ul">
-						<li class=""><a href="#">작가 정보</a></li>
+						<li class=""><a href="/information">작가 정보</a></li>
 						<li class=""><a href="/myWork">나의 작품</a></li>
 					</ul>
 				</div>
