--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -2008,9 +2008,9 @@ input[type="radio"]:checked + label span {
 .the-more:after{content:'';background-image: url(../img/de/pl-icon.jpg);width: 1.1rem;height: 1.1rem;background-size: 1.1rem;position: absolute;left: 4.5rem;top: 1.8rem;}
 .the-more:before{content:'';}
 
-.mg_l5{margin-left:5px;}
-.mg_l10{margin-left:10px;}
-.mg_l20{margin-left:20px;}
+.mg_l5{margin-left:0.5rem;}
+.mg_l10{margin-left:1rem;}
+.mg_l20{margin-left:2rem;}
 .mg_l30{margin-left: 5rem;}
 
 .mg_t77{margin-top:7.7rem;margin-bottom: 6.6rem;}
@@ -2046,7 +2046,7 @@ input[type="radio"]:checked + label span {
 
 
 .max-w1023{max-width:102.3rem;}
-.max-w530{max-width: 53rem;}
+.max-w530{max-width: 130rem;}
 
 .modal-baeg{
     width: 100%;
@@ -2713,6 +2713,8 @@ input[type="radio"]:checked + label span {
     padding-top: 1rem;
     padding-bottom: 3rem;
     font-weight: 500;
+    white-space: nowrap;
+    letter-spacing: -0.2px;
 }
 
 .input-group{
@@ -3878,11 +3880,399 @@ input[type="radio"]:checked + label span {
 
 
 
+.modal-sech3{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-radius: 0;
+}
+.modal-sech3 .modal-content{
+    height: 100%;
+    width: 100%;
+}
+
+.modal-sech3 .modal-body{
+    padding: 0;
+    width: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
+}
+.modal-sech3 .modal-body .modal-potitle{
+}
+.modal-sech3 .modal-body .modal-potitle h2{
+    border-bottom: #cecece 1px solid;
+    font-size: 20px;
+    font-weight: 600;
+    color: #e9625c;
+    padding-bottom: 23px;
+    padding-top: 100px;
+}
+.modal-sech3 .modal-content{}
+.modal-sech3 .modal-content .modal-header{
+    border: none;
+    min-height: 0;
+    padding: 0;
+}
+.modal-sech3 .modal-content .modal-header .conts a{}
+.dib{display:inline-block;}
+.mg-r50{margin-right: 5.5rem;padding-top: 11px;display: inline-block !important;}
+.input-5{
+    width: 66rem;
+    height: 40px;
+    border: #cccccc 1px solid;
+    padding-left: 15px;
+}
+.textarea-3{
+    width: 66rem;
+    border: #ccc 1px solid;
+    padding: 15px;
+}
+.mg_l10{margin-left:1rem;}
+
+
+.myd-box-3{
+    width: 97rem;
+    margin: 0 auto;
+}
+
+.content{
+    border: #cccccc 1px solid;
+    background-color: #fff;
+    text-align: center;
+    transition: all .15s ease-in-out;
+    width: 200px;
+    height: 200px;
+    background-image: url("../img/mypage/icon-u.png");
+    background-size: 100px 112px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+/* .content:after{content:'';background-image: url("../img/mypage/icon-u.png");position: absolute;top: 50%;left: 50%;width: 100px;height: 112px;background-size: 100px 112px;transform: translate(-50%, -50%);z-index: -1;}
+ */
+.content img, .content video{
+    width:100%;
+    height:100%;
+    display:none;
+}
+
+.cont-box{position: relative;width: 415px;}
+.cont-box .content{
+    position: relative;
+}
+.cont-box .cont-text{
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #333333;
+    font-size: 14px;
+    opacity: 0.5;
+    font-weight: 600;
+}
+.selec-flex{
+    display: flex;
+    width: 66rem;
+}
+.selec-flex .selec-box{
+    flex: 1;
+}
+.selec-flex .selec-box:last-child{margin-left: 4rem;}
+.selec-flex .bootstrap-select > .btn{
+    background: #fff;
+    padding: 0.8rem 18px;
+    border: #cccccc 1px solid;
+}
+.selec-flex .bootstrap-select.btn-group .btn .filter-option{}
+
+.ic-dp{
+    width: 3.6rem;
+}
+
+.ov-hy{/* overflow-y: auto; *//* height: 30rem; */font-size: 2.6rem !important;color: #333333;font-weight: 600;padding: 4.4rem 8.4rem;}
+
+.max-w960{max-width: 132rem;}
+
+
+
+.coll-text{
+    border: #e8e8e8 1px solid;
+    padding: 6.5rem;
+    font-size: 12px;
+    color: #999999;
+    font-weight: 600;
+    line-height: 1.83;
+}
+.modal-demo-1{
+    display: table;
+    width: 100%;
+}
+.modmo-left{
+    display: table-cell;
+    width: 44rem;
+    height: 29.6rem;
+}
+.modmo-left img{
+    width: 100%;
+    height: 100%;
+}
+.modmo-right{
+    display: table-cell;
+    vertical-align: top;
+    padding-left: 4rem;
+}
+.modmo-right h3{
+    font-size: 2.6rem;
+    font-weight: 600;
+    padding-bottom: 5px;
+    padding-top: 3rem;
+}
+.modmo-right .mrp1{
+    font-size: 2.6rem;
+    color: #999999;
+}
+.modmo-right .mrp2{
+    font-size: 3.2rem;
+    font-weight: 600;
+    color: #333333;
+}
 
 
 
 
+.intro{
+   background: #fff;
+   padding: 60px 30px;
+   color: #333;
+   margin-bottom: 15px;
+   line-height: 1.5;
+   text-align: center;
+}
+.intro h1 {
+   font-size: 18pt;
+   padding-bottom: 15px;
 
+}
+.intro p{
+   font-size: 14px;
+}
+
+.action{
+   text-align: center;
+   display: block;
+   margin-top: 20px;
+}
+
+a.btn {
+  text-decoration: none;
+  color: #666;
+   border: 2px solid #666;
+   padding: 10px 15px;
+   display: inline-block;
+   margin-left: 5px;
+}
+a.btn:hover{
+   background: #666;
+   color: #fff;
+    transition: .3s;
+-webkit-transition: .3s;
+}
+.btn:before{
+  font-family: FontAwesome;
+  font-weight: normal;
+  margin-right: 10px;
+}
+.github:before{content: "\f09b"}
+.down:before{content: "\f019"}
+.back:before{content:"\f112"}
+.credit{
+    background: #fff;
+    padding: 12px;
+    font-size: 9pt;
+    text-align: center;
+    color: #333;
+    margin-top: 40px;
+
+}
+.credit span:before{
+   font-family: FontAwesome;
+   color: #e41b17;
+   content: "\f004";
+
+
+}
+.credit a{
+   color: #333;
+   text-decoration: none;
+}
+.credit a:hover{
+   color: #1DBF73; 
+}
+.credit a:hover:after{
+    font-family: FontAwesome;
+    content: "\f08e";
+    font-size: 9pt;
+    position: absolute;
+    margin: 3px;
+}
+article li{
+   color: #444;
+   font-size: 15px;
+   margin-left: 33px;
+   line-height: 1.5;
+   padding: 5px;
+}
+article h1,
+article h2,
+article h3,
+article h4,
+article p{
+   padding: 14px;
+   color: #333;
+}
+article p{
+   font-size: 15px;
+    line-height: 1.5;
+}
+
+.set-overlayer,
+.set-glass,
+.set-sticky {
+	cursor: pointer;
+	height: 45px;
+	line-height: 45px;
+	padding: 0 15px;
+	color: #333;
+	font-size: 16px;
+}
+.set-overlayer:after,
+.set-glass:after,
+.to-active:after,
+.set-sticky:after {
+	font-family: FontAwesome;
+	font-size: 18pt;
+	position: relative;
+	float: right;
+}
+.set-overlayer:after,
+.set-glass:after,
+.set-sticky:after {
+	content: "\f204";
+	transition: .6s;
+}
+
+.to-active:after {
+	content: "\f205";
+	color: #008080;
+	transition: .6s;
+}
+.set-overlayer,
+.set-glass,
+.set-sticky,
+.source,
+.theme-tray {
+	margin: 10px;
+	background: #f2f2f2;
+	border-radius: 5px;
+	border: 2px solid #f1f1f1;
+	box-sizing: border-box;
+}
+/* Syntax Highlighter*/
+
+pre.prettyprint {
+	padding: 15px !important;
+   margin: 10px;
+	border: 0 !important;
+  background: #f2f2f2;
+  overflow: auto;
+}
+
+.source {
+	white-space: pre;
+	overflow: auto;
+	max-height: 400px;
+}
+code{
+    border:1px solid #ddd;
+    padding: 2px;
+    border-radius: 2px;
+}
+
+.check-info{
+    display: inline-block;
+    vertical-align: top;
+    font-size: 2.2rem;
+    color: #999999;
+}
+.check-info p{
+    padding-bottom: 5px;
+    font-weight: 600;
+    color: #333333;
+    font-size: 2.4rem;
+}
+
+
+.panel-group2{
+    border: none;
+    /* margin-bottom: 0; */
+}
+.panel-default2{
+    margin-bottom: 0;
+}
+.panel-group2 .panel{
+    border-radius: 0;
+    border: none;
+    margin-top: 0 !important;
+    box-shadow: none;
+}
+.panel-default2>.panel-heading2{
+    background: #f9f9f9;
+    border: #e8e8e8 1px solid;
+    padding: 2.5rem 1.3rem;
+}
+.panel-title2{
+    font-size: 19px;
+    font-weight: 600;
+}
+.panel-title2 a{
+    width: 100%;
+    display: block;
+    position: relative;
+}
+.panel-title2 a.collapsed .collapsdiv:after{content:'';width: 16px;height: 11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-down.png);background-size: 16px 11px;}
+
+.panel-title2 a  .collapsdiv:before{content:'';width:16px;height:11px;position: absolute;right: 15px;top: 50%;margin-top: -5px;background-image: url(../img/mypage/ar-up.png);background-size: 16px 11px;}
+
+.panel-collapse2{
+    border: none;
+    position: relative;
+    padding-bottom: 0;
+}
+.panel-collapse2 in{}
+.panel-collapse2:after{content:'';}
+.panel-collapse2:before in{content:'';}
+.panel-default2>.panel-heading2+.panel-collapse2>.panel-body{
+    border: none;
+    padding: 0;
+}
+.wrapper-title{
+    text-align: right;
+    font-size: 2.4rem;
+    color: #e9625c;
+    padding: 2rem 0 0.5rem 0;
+    font-weight: 600;
+}
+.collapsdiv{
+    font-size: 2rem;
+    color: #fff;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: #bdbdbd;
+    padding: 1rem 6rem 1rem 2.5rem;
+    border-radius: 40px;
+}
 
 
 
