--- a/src/main/resources/templates/thymeleaf/fo/myPage/coupon.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/coupon.html
@@ -374,6 +374,12 @@ jQuery(document).ready(function() {
 	if(sAuthSqVal == 2){
 		document.getElementById("portfolio").style.display="";
 	}
+	$("#conTitle").empty();
+	const conBtn = document.getElementById("conBtn");
+	conBtn.remove();
+	var conTitleHtml = "";
+	conTitleHtml += '<h3>My Deal</h3>';
+	$("#conTitle").append(conTitleHtml).trigger("create");
 });
 </script>
     
