--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
-    <style>
+	<style>
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     </style>
 </head>
@@ -9,11 +10,14 @@
 <body>
 	<div class="wrap">
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
+		
 		<div class="body-wrap">
 			<div class="contents">
-				
+				<div th:text="${session.mbrSq}" id="mbrSq" style="display:none"></div>
 				<div class="con-wrap pop-wrap">
-				<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
+				
+					<th:block th:replace="thymeleaf/myPageLeft :: myPageLeftFragment"></th:block>
+					
 					<div class="con-right">
 					
 						<div class="reds-box mg_t150 por">
@@ -32,7 +36,7 @@
 							<div class="med-ic">
 								<div class="por">
 									<div class="tootip-5">설정/공유</div>
-									<img src="resources/img/mypage/icon-8.png" class="med-me">
+									<img src="/resources/img/mypage/icon-8.png" class="med-me">
 								</div>
 							</div>
 						</div>
@@ -47,7 +51,7 @@
 									
 									<!-- active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover -->
 									<div class="item-div-img reg">
-										<img src="resources/img/de/be-bg1.png">
+										<img src="/resources/img/de/be-bg1.png">
 										
 										<div class="item-ho">
 											<p>2022. 01. 01 – 2022. 01.30</p>
@@ -84,7 +88,7 @@
 										<!-- 임시저장 -->
 										<div class="item-ho3 save-div">
 											<div class="saves">
-												<img src="resources/img/mypage/icon-7.png" />
+												<img src="/resources/img/mypage/icon-7.png" />
 												<span class="saves-text">임시저장</span>
 											</div>
 										</div>	
@@ -101,7 +105,7 @@
 									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 											<h3>작가명 (1983년생)</h3>
@@ -130,13 +134,13 @@
 									
 									<!-- sold-1 ~ 4 넣으면 나옵니다 -->
 									<div class="item-div-img sold-2">
-										<img src="resources/img/de/be-bg2.png">
+										<img src="/resources/img/de/be-bg2.png">
 									</div>
 									
 									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 											<h3>작가명 (1983년생)</h3>
@@ -158,13 +162,13 @@
 									<div class="heart"></div>
 									
 									<div class="item-div-img sale">
-										<img src="resources/img/de/be-bg3.png">										
+										<img src="/resources/img/de/be-bg3.png">										
 									</div>
 									
 									<!-- 하단텍스트 -->
 									<div class="item-body">
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 											<h3>작가명 (1983년생)</h3>
@@ -236,7 +240,7 @@
 							
 							<!-- active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover -->
 							<div class="item-div-img reg">
-								<img src="resources/img/de/be-bg1.png">
+								<img src="/resources/img/de/be-bg1.png">
 								
 								<div class="item-ho">
 									<p>2022. 01. 01 – 2022. 01.30</p>
@@ -273,7 +277,7 @@
 								<!-- 임시저장 -->
 								<div class="item-ho3 save-div">
 									<div class="saves">
-										<img src="resources/img/mypage/icon-7.png" />
+										<img src="/resources/img/mypage/icon-7.png" />
 										<span class="saves-text">임시저장</span>
 									</div>
 								</div>	
@@ -290,7 +294,7 @@
 							<!-- 하단텍스트 -->
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -319,13 +323,13 @@
 							
 							<!-- sold-1 ~ 4 넣으면 나옵니다 -->
 							<div class="item-div-img sold-2">
-								<img src="resources/img/de/be-bg2.png">
+								<img src="/resources/img/de/be-bg2.png">
 							</div>
 							
 							<!-- 하단텍스트 -->
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -347,13 +351,13 @@
 							<div class="heart"></div>
 							
 							<div class="item-div-img sale">
-								<img src="resources/img/de/be-bg3.png">										
+								<img src="/resources/img/de/be-bg3.png">										
 							</div>
 							
 							<!-- 하단텍스트 -->
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -513,19 +517,19 @@
     	    event.stopPropagation();
     	});
       
+      $(function() { 
+    		if(sAuthSqVal == 2){
+    			document.getElementById("portfolio").style.display="";
+    		}
+    		$("#conTitle").empty();
+    		const conBtn = document.getElementById("conBtn");
+    		conBtn.remove();
+    		var conTitleHtml = "";
+    		conTitleHtml += '<h3>설정</h3>';
+    		$("#conTitle").append(conTitleHtml).trigger("create");
+    	});   
       
-jQuery(document).ready(function() {
-	$("#conTitle").empty();
-	$("#conBtn").empty();
-	var conBtn = document.getElementById("conBtn");
-	conBtn.style.display = "";
-	var conTitleHtml = "";
-	conTitleHtml += '<h3>포트폴리오</h3>';
-	$("#conTitle").append(conTitleHtml).trigger("create");
-	conBtn.innerHTML += '<a href="#"  data-toggle="modal" data-target="#myModals"><img src="resources/img/mypage/mycon-1.png" /></a>';
-	conBtn.innerHTML += '<a href="#"><img src="resources/img/mypage/mycon-2.png" /></a>';
-});     
-</script>
+    </script>
     
 	
 	
