--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -22,14 +22,17 @@
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
 	<link type="text/css"rel="stylesheet" href="resources/css/common_pc.css">
+		<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select.css">
 	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
 	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
 	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
 	
-	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
+	<!-- <script src="https://code.jquery.com/jquery-latest.min.js"></script> -->
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="resources/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="resources/js/common.js"></script>
+    <script type="text/javascript" src="resources/js/bootstrap-select.js"></script>
     
 </head>
 <body>
