마이페이지 거래내역 조회, 검색 조건에 따른 조회 기능 추가, 유효한 날짜 체크 공통함수 추가

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -426,7 +426,8 @@
       	}, delay);
       	
       });
-var artstInfo = [[${result}]];
+
+var artstInfo = /*[[${result}]]*/ 'default';
 $(function() {    
 	var workList = artstInfo.workList;
 	var career = artstInfo.career;
