--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -3331,7 +3331,17 @@ input[type="radio"]:checked + label span {
     padding: 0 30px 0 5px;
     font-size: 14px;
 }
-.input-cand:after{content:'';background-image: url(../img/mypage/icon-can.png);width: 20px;height: 19px;background-size: 100%;position: absolute;right: 7px;top: 50%;transform: translateY(-50%);}
+.input-cand:after{
+	content:'';
+	background-image: url(../img/mypage/icon-can.png);
+	width: 20px;
+	height: 19px;
+	background-size: 100%;
+	position: absolute;
+	right: 7px;
+	top: 50%;
+	transform: translateY(-50%);
+}
 
 .is-span{
     display: inline-block;
