--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -1,13 +1,8 @@
+<!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-
-	
 <div th:fragment="headerFragment">
 
-
-
-<!DOCTYPE html>
-<html>
 <head>
 <meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,15 +16,17 @@
 	<link type="text/css" rel="stylesheet" href="resources/css/font.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/swiper-bundle.min.css" />
 	<link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
-	<link type="text/css"rel="stylesheet" href="resources/css/common_pc.css">
+	<link type="text/css" rel="stylesheet" href="resources/css/common_pc.css">
 	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/ui_mo.css" />
 	<link type="text/css" media="screen and (min-width: 751px) and (max-width: 1536px)" rel="stylesheet" href="resources/css/ui_tablet.css" />
 	<link type="text/css" media="screen and (min-width: 1537px)" rel="stylesheet" href="resources/css/ui_pc.css" />
+	<link type="text/css" rel="stylesheet" href="resources/css/jquery-ui.css">
 	
 	<script src="https://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="resources/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="resources/js/common.js"></script>
+    <script src="resources/js/jquery-ui.min.js"></script>
     
 </head>
 <body>
