공통 함수 수정

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 							<div id="myDealList">
-								<div class="myd-box myd-mobile" id="myDealList">
+								<!-- <div class="myd-box myd-mobile">
 									<div class="myd-img">
 										<img src="resources/img/mypage/img_bg.png"  class="" />
 										<button type="button" class="btns-4">응찰 히스토리</button>
@@ -101,262 +101,8 @@
 											</div>
 										</div>
 									</div>
-								</div>
-								
-								
-								<div class="myd-box myd-mobile">
-									<div class="myd-img">
-										<img src="resources/img/mypage/img_bg.png"  class="" />
-										<button type="button" class="btns-4">응찰 히스토리</button>
-										<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
-									</div>
-									<div class="myd-2">
-										<div class="myd-te1">
-											<h4>작가명</h4>
-											<h5>작품명 입니다작품명입니다작품명입니다(2021)</h5>
-										</div>
-										<div class="myd-te2">
-											<dl class="myd-dl3">
-												<dt>경매기간</dt>
-												<dd>2021.10.31 – 2021.11.31</dd>
-												<dt>시작가</dt>
-												<dd>1,700,000 원</dd>
-												<dt>현재입찰가</dt>
-												<dd>2,300,000 원</dd>
-												<dt>응찰가</dt>
-												<dd>
-													<div class="is-sum2">
-														<div class="is-won"><input type="text" class="" placeholder="" /></div>
-														<button type="button" class="">응찰하기</button>
-													</div>
-												</dd>
-												<dt>남은시간</dt>
-												<dd>21:27:35</dd>
-												<dt>응찰수</dt>
-												<dd>12</dd>
-												<dt>예상수수료</dt>
-												<dd>250,000원</dd>
-												<dt>예상배송비</dt>
-												<dd></dd>
-											</dl>
-										</div>
-									</div>
-									<div class="myd-te3">
-										<div class="myd-table">
-											<div class="myd-won">
-												<p class="won-p">
-													현재 가장 높은 입찰가로  입찰 중 입니다.
-													<span>경매 진행 중</span>
-												</p>
-												<button type="button" class="btns-2">구매확정</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								
-								<div class="myd-box myd-mobile">
-									<div class="myd-img">
-										<img src="resources/img/mypage/img_bg.png"  class="" />
-										<button type="button" class="btns-4">응찰 히스토리</button>
-										<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
-									</div>
-									<div class="myd-2">
-										<div class="myd-te1">
-											<h4>작가명</h4>
-											<h5>작품명 입니다작품명입니다작품명입니다(2021)</h5>
-										</div>
-										<div class="myd-te2">
-											<dl class="myd-dl3">
-												<dt>경매기간</dt>
-												<dd>2021.10.31 – 2021.11.31</dd>
-												<dt>시작가</dt>
-												<dd>1,700,000 원</dd>
-												<dt>현재입찰가</dt>
-												<dd>2,300,000 원</dd>
-												<dt>응찰가</dt>
-												<dd>
-													<div class="is-sum2">
-														<div class="is-won"><input type="text" class="" placeholder="" /></div>
-														<button type="button" class="">응찰하기</button>
-													</div>
-												</dd>
-												<dt>남은시간</dt>
-												<dd>21:27:35</dd>
-												<dt>응찰수</dt>
-												<dd>12</dd>
-												<dt>예상수수료</dt>
-												<dd>250,000원</dd>
-												<dt>예상배송비</dt>
-												<dd></dd>
-											</dl>
-										</div>
-									</div>
-									<div class="myd-te3">
-										<div class="myd-table">
-											<div class="myd-won">
-												<p class="won-p">
-													현재 가장 높은 입찰가로  입찰 중 입니다.
-													<span>경매 진행 중</span>
-												</p>
-												<button type="button" class="btns-2">구매확정</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								
-								<div class="myd-box myd-mobile">
-									<div class="myd-img">
-										<img src="resources/img/mypage/img_bg.png"  class="" />
-										<button type="button" class="btns-4">응찰 히스토리</button>
-										<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
-									</div>
-									<div class="myd-2">
-										<div class="myd-te1">
-											<h4>작가명</h4>
-											<h5>작품명 입니다작품명입니다작품명입니다(2021)</h5>
-										</div>
-										<div class="myd-te2">
-											<dl class="myd-dl3">
-												<dt>경매기간</dt>
-												<dd>2021.10.31 – 2021.11.31</dd>
-												<dt>시작가</dt>
-												<dd>1,700,000 원</dd>
-												<dt>현재입찰가</dt>
-												<dd>2,300,000 원</dd>
-												<dt>응찰가</dt>
-												<dd>
-													<div class="is-sum2">
-														<div class="is-won"><input type="text" class="" placeholder="" /></div>
-														<button type="button" class="">응찰하기</button>
-													</div>
-												</dd>
-												<dt>남은시간</dt>
-												<dd>21:27:35</dd>
-												<dt>응찰수</dt>
-												<dd>12</dd>
-												<dt>예상수수료</dt>
-												<dd>250,000원</dd>
-												<dt>예상배송비</dt>
-												<dd></dd>
-											</dl>
-										</div>
-									</div>
-									<div class="myd-te3">
-										<div class="myd-table">
-											<div class="myd-won">
-												<p class="won-p">
-													현재 가장 높은 입찰가로  입찰 중 입니다.
-													<span>경매 진행 중</span>
-												</p>
-												<button type="button" class="btns-2">구매확정</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								
-								<div class="myd-box myd-mobile">
-									<div class="myd-img">
-										<img src="resources/img/mypage/img_bg.png"  class="" />
-										<button type="button" class="btns-4">응찰 히스토리</button>
-										<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
-									</div>
-									<div class="myd-2">
-										<div class="myd-te1">
-											<h4>작가명</h4>
-											<h5>작품명 입니다작품명입니다작품명입니다(2021)</h5>
-										</div>
-										<div class="myd-te2">
-											<dl class="myd-dl3">
-												<dt>경매기간</dt>
-												<dd>2021.10.31 – 2021.11.31</dd>
-												<dt>시작가</dt>
-												<dd>1,700,000 원</dd>
-												<dt>현재입찰가</dt>
-												<dd>2,300,000 원</dd>
-												<dt>응찰가</dt>
-												<dd>
-													<div class="is-sum2">
-														<div class="is-won"><input type="text" class="" placeholder="" /></div>
-														<button type="button" class="">응찰하기</button>
-													</div>
-												</dd>
-												<dt>남은시간</dt>
-												<dd>21:27:35</dd>
-												<dt>응찰수</dt>
-												<dd>12</dd>
-												<dt>예상수수료</dt>
-												<dd>250,000원</dd>
-												<dt>예상배송비</dt>
-												<dd></dd>
-											</dl>
-										</div>
-									</div>
-									<div class="myd-te3">
-										<div class="myd-table">
-											<div class="myd-won">
-												<p class="won-p">
-													현재 가장 높은 입찰가로  입찰 중 입니다.
-													<span>경매 진행 중</span>
-												</p>
-												<button type="button" class="btns-2">구매확정</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								
-								<div class="myd-box myd-mobile">
-									<div class="myd-img">
-										<img src="resources/img/mypage/img_bg.png"  class="" />
-										<button type="button" class="btns-4">응찰 히스토리</button>
-										<button type="button" class="btns-4">거래 계약 안내 및 상세</button>
-									</div>
-									<div class="myd-2">
-										<div class="myd-te1">
-											<h4>작가명</h4>
-											<h5>작품명 입니다작품명입니다작품명입니다(2021)</h5>
-										</div>
-										<div class="myd-te2">
-											<dl class="myd-dl3">
-												<dt>경매기간</dt>
-												<dd>2021.10.31 – 2021.11.31</dd>
-												<dt>시작가</dt>
-												<dd>1,700,000 원</dd>
-												<dt>현재입찰가</dt>
-												<dd>2,300,000 원</dd>
-												<dt>응찰가</dt>
-												<dd>
-													<div class="is-sum2">
-														<div class="is-won"><input type="text" class="" placeholder="" /></div>
-														<button type="button" class="">응찰하기</button>
-													</div>
-												</dd>
-												<dt>남은시간</dt>
-												<dd>21:27:35</dd>
-												<dt>응찰수</dt>
-												<dd>12</dd>
-												<dt>예상수수료</dt>
-												<dd>250,000원</dd>
-												<dt>예상배송비</dt>
-												<dd></dd>
-											</dl>
-										</div>
-									</div>
-									<div class="myd-te3">
-										<div class="myd-table">
-											<div class="myd-won">
-												<p class="won-p">
-													현재 가장 높은 입찰가로  입찰 중 입니다.
-													<span>경매 진행 중</span>
-												</p>
-												<button type="button" class="btns-2">구매확정</button>
-											</div>
-										</div>
-									</div>
-								</div>
+								</div> -->
 							</div>
-							
-							
-						</div>
 						
 					</div>
 				</div>
